--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,26 @@ version: '3.3'
 
 services:
   postgres:
+    container_name: postgres
     restart: unless-stopped
     image: postgres:14
-    container_name: postgres
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8
     volumes:
       - ./data/db:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
   app:
-    restart: unless-stopped
-    build: ./docker
     container_name: app
+    restart: unless-stopped
+    depends_on:
+      - postgres
+    ports:
+      - "3000:3000"
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     volumes:
       - /etc/localtime:/etc/localtime:ro
 
