--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,36 @@
+#FROM	node:lts-alpine
+#WORKDIR /usr/src/app
+
+#COPY    package*.json ./
+#COPY    yarn*.lock ./
+
+#RUN     npm install
+#COPY    . .
+
+#RUN		npm run build
+
+#CMD		["node", "dist/main"]
+
+# == FRONT == ##
 FROM	node:lts-alpine
+WORKDIR /usr/src/app/front
 
-WORKDIR	/usr/src/app
+COPY    frontend/package*.json ./
+COPY    frontend/yarn*.lock ./
 
-COPY	./app .
+RUN     yarn install
+COPY    frontend/. .
+RUN		yarn build
 
-RUN		npm run build
+# == BACK == ##
+FROM	node:lts-alpine
+WORKDIR /usr/src/app/back
+
+COPY    backend/package*.json ./
+COPY    backend/yarn*.lock ./
+
+RUN     yarn install
+COPY    backend/. .
+RUN		yarn build
 
 CMD		["node", "dist/main"]
