--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ DB_USERNAME="user"
 DB_PASSWORD="password"
 DB_NAME="transcendence"
 
-APP_IP="localhost"
-APP_PORT="3000"
+BACK_IP="0.0.0.0"
+BACK_PORT="3000"
+
+VITE_IP="0.0.0.0"
+VITE_PORT="8080"
