--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -14,10 +14,14 @@ services:
       PG_DATA: /var/lib/postgresql/data
     ports:
       - ${DB_PORT}:${DB_PORT}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
     networks:
       - webnet
+
   ################## Backend #################
   back:
     container_name: back
@@ -29,11 +33,14 @@ services:
     build:
       context: .
       dockerfile: ./docker/back.Dockerfile
-    command: node dist/main
+    volumes:
+      - './backend/:/usr/src/app'
+    command: yarn start:dev
     env_file:
       - .env
     networks:
       - webnet
+
   ################## Frontend #################
   front:
     container_name: front
@@ -43,11 +50,33 @@ services:
     build:
       context: .
       dockerfile: ./docker/front.Dockerfile
+    command: yarn dev
+    volumes:
+      - './frontend/:/usr/src/app'
     env_file:
       - .env
     networks:
       - webnet
-    
+
+  ################## PGadmin ##################
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    depends_on:
+      - postgres
+    ports:
+      - 5000:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/_servers.json
+    volumes:
+      - ./servers.json:/pgadmin4/_servers.json
+    command: chown -R 5050:5050 /pgadmin4/_servers.json
+    networks:
+      - webnet
+
 networks:
   webnet:
     driver: bridge
