docker-compose for dev work, continue production mode

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,9 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.4",
     "@nestjs/platform-socket.io": "^8.4.4",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.4",
     "argon2": "^0.28.5",
@@ -56,7 +57,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
