--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/three": "^0.140.0",
+    "three": "^0.140.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
