--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,21 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=16.14.0",
+    "npm": ">=8.3.0"
+  },
   "dependencies": {
+    "@quasar/extras": "^1.13.6",
     "@types/node": "^17.0.31",
-    "vue": "^3.2.25"
+    "quasar": "^2.6.6",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.0.9",
     "@vitejs/plugin-vue": "^2.3.1",
+    "sass": "1.32.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
