--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.13.6",
     "@types/node": "^17.0.31",
+    "@vue/composition-api": "^1.6.1",
     "quasar": "^2.6.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
