--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,39 @@
 {
   "name": "frontend",
+  "version": "0.0.1",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "engines": {
-    "node": ">=16.14.0",
-    "npm": ">=8.3.0"
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "lint": "eslint --ext .js,.ts,.vue ./"
   },
   "dependencies": {
-    "@quasar/extras": "^1.13.6",
-    "@types/node": "^17.0.31",
-    "@vue/composition-api": "^1.6.1",
-    "quasar": "^2.6.6",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.0.9",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "sass": "1.32.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "@quasar/app-vite": "^1.0.0-alpha.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "@vue/devtools": "^6.1.4",
+    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-standard": "^17.0.0-1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "typescript": "^4.5.4"
+  },
+  "engines": {
+    "node": "^18 || ^16 || ^14.19",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
