[DRAFT] Save working game (need to be integrated into NestJS and share client socket)

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -57,7 +57,7 @@ services:
     command: yarn dev
     volumes:
       - './frontend/:/usr/src/app'
-      - './common/game/logic/:/usr/src/app/src/components/game/logic/'
+      - './common/game/:/usr/src/app/src/components/game/common/'
     env_file:
       - .env
     networks:
