--- a/backend/package.json
+++ b/backend/package.json
@@ -25,19 +25,22 @@
     "npm": ">=8.3.0"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.4.4",
-    "@nestjs/platform-socket.io": "^8.4.4",
+    "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.4.4",
+    "@nestjs/websockets": "^8.4.5",
+    "@types/three": "^0.140.0",
     "argon2": "^0.28.5",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "three": "^0.141.0",
     "typeorm": "0.2"
   },
   "devDependencies": {
