--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -38,6 +38,7 @@ services:
     command: yarn start:dev
     volumes:
       - './backend/:/usr/src/app'
+      - './common/game/:/usr/src/app/src/game/common/'
     env_file:
       - .env
     networks:
