i have no idea what im doing

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+.*
+README.md
+test/
+tsconfig.*
+nest-cli.json
+
 data/
 .vscode
 .DS_Store
 .*.swp
 .*.swo
 *.vim
+node_modules/
+package.json
+yarn.lock
