--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,9 @@
     "@nestjs/websockets": "^8.4.5",
     "@types/three": "^0.140.0",
     "argon2": "^0.28.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "nanoid": "3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
