--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "quasar dev",
+    "dev": "quasar dev -H 0.0.0.0",
     "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./"
   },
