--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "quasar": "^2.6.0",
+    "sanitize-html": "^2.7.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.1.10",
@@ -22,6 +23,7 @@
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@quasar/app-vite": "^1.0.0-alpha.0",
     "@types/node": "^12.20.21",
+    "@types/sanitize-html": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vue/devtools": "^6.1.4",
