--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.4",
-    "argon2": "^0.28.5",
+    "argon2": "0.26.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "pg": "^8.7.3",
