--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,50 @@
-.*
-README.md
-test/
-tsconfig.*
-nest-cli.json
+# env
+.auth.env
 
-data/
-.vscode
+# Compiled output
+dist
+node_modules
+src_old
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
 .DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 .*.swp
 .*.swo
 *.vim
-node_modules/
-package.json
-yarn.lock
+.eslintrc.js
+.prettierrc
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Docker
+data/
+
+# For pohl
+TODO.md
