--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "lib": [
+      "ES2021.String"
+    ],
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
