--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "ft_transcendance",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -28,7 +28,9 @@
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^9.0.3",
     "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/websockets": "^9.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
