--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "quasar": "^2.6.0",
+    "socket.io-client": "^4.5.1",
     "three": "^0.140.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
