--- a/backend/package.json
+++ b/backend/package.json
@@ -34,10 +34,12 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.5",
+    "@types/cookie-parser": "^1.4.3",
     "@types/three": "^0.140.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "nanoid": "3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
