--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,32 @@
 version: '3.3'
 
-# TODO use .env
-
 services:
   ################ Postgresql ################
   postgres:
-    container_name: postgres
+    container_name: ${DB_HOST}
     restart: unless-stopped
     image: postgres:14
     ports:
-      - 5432:5432
+      - ${DB_PORT}:${DB_PORT}
     environment:
-      - POSTGRES_DB=transcendence
-      - POSTGRES_USER=transcendence
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8
     volumes:
-      - ./data/db:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
-    networks:
-      - webnet
+      - ./data/db:/var/lib/postgresql/data
 
-  ################# Backend #################
+  ################# Transcendence #################
   backend:
-    container_name: backend
+    container_name: transcendence
     restart: unless-stopped
     depends_on:
       - postgres
     ports:
-      - 8080:8080 # env
+      - ${BACK_PORT}:${BACK_PORT}
     build:
       context: .
-      dockerfile: ./docker/back.Dockerfile
+      dockerfile: ./docker/Dockerfile
       args:
-        NODE_ENV: developpement
-    command: yarn start:dev
-    volumes:
-      - './backend/:/usr/src/app'
-    networks:
-      - webnet
-
-
-networks:
-  webnet:
-    driver: bridge
+        NODE_ENV: production
