--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - ./data/db:/var/lib/postgresql/data
 
   ################# Transcendence #################
-  backend:
+  transcendence:
     container_name: transcendence
     restart: unless-stopped
     depends_on:
@@ -30,3 +30,5 @@ services:
       dockerfile: ./docker/Dockerfile
       args:
         NODE_ENV: production
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
