--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.5",
     "@types/cookie-parser": "^1.4.3",
-    "@types/three": "^0.140.0",
+    "@types/three": "0.141",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -45,7 +45,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "three": "^0.142.0",
+    "three": "0.141",
     "typeorm": "0.2"
   },
   "devDependencies": {
