--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "@types/three": "^0.140.0",
+    "@types/three": "0.141",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "quasar": "^2.6.0",
     "socket.io-client": "^4.5.1",
-    "three": "^0.142.0",
+    "three": "0.141",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
