--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,12 @@
     "npm": ">=8.3.0"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.8",
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^8.4.6",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/platform-socket.io": "^8.4.5",
     "@nestjs/schedule": "^2.0.1",
@@ -38,11 +41,8 @@
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "nanoid": "3",
-    "@nestjs/axios": "^0.0.8",
-    "@nestjs/jwt": "^8.0.1",
-    "@nestjs/passport": "^8.2.1",
     "cookie-parser": "^1.4.6",
+    "nanoid": "3",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -63,6 +63,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-oauth2": "^1.4.11",
