--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,9 @@
 version: '3.3'
 
-# TODO use .env
-
 services:
   ################ Postgresql ################
   postgres:
-    container_name: postgres
+    container_name: ${DB_HOST}
     restart: unless-stopped
     image: postgres:14
     environment:
@@ -15,7 +13,6 @@ services:
       POSTGRES_INITDB_ARGS: --encoding=UTF-8
       PG_DATA: /var/lib/postgresql/data
     volumes:
-      - ./data/db:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
@@ -27,11 +24,15 @@ services:
     depends_on:
       - postgres
     ports:
-      - 8080:8080 # env
+      - ${BACK_PORT}:${BACK_PORT}
     build:
       context: .
-      dockerfile: ./docker/back.Dockerfile
+      dockerfile: ./docker/production.Dockerfile
       args:
         NODE_ENV: production
     volumes:
       - /etc/localtime:/etc/localtime:ro
+
+volumes:
+  pgdata:
+    driver: local
