This setup compiles!

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB_HOST="postgres"
-DB_PORT="5432"
-DB_USERNAME="user"
-DB_PASSWORD="password"
-DB_NAME="transcendence"
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=transcendence
+DB_PASSWORD=password
+DB_NAME=transcendence
 
-BACK_IP="0.0.0.0"
-BACK_PORT="8080"
+BACK_IP=0.0.0.0
+BACK_PORT=8080
 
-VITE_IP="0.0.0.0"
-VITE_PORT="3000"
+VITE_IP=0.0.0.0
+VITE_PORT=3000
