--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "otplib": "^12.0.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^8.7.3",
@@ -62,6 +63,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.10",
     "@types/sanitize-html": "^2.6.2",
     "@types/supertest": "^2.0.11",
     "@types/three": "0.141",
