--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,7 @@
     "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/typeorm": "8.0.3",
     "@nestjs/websockets": "^8.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
