Add .vscode to back & front, path eslint plugin infrontend

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -12,5 +12,8 @@
     "typescript",
     "vue"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "editor.tabSize": 2,
+  "editor.insertSpaces": false,
+  "editor.detectIndentation": true
 }
