Initial config for the VPS

--- a/.env
+++ b/.env
@@ -10,5 +10,6 @@ BACK_PORT=8080
 VITE_IP=0.0.0.0
 VITE_PORT=3000
 
-FRONTEND_HOST=http://127.0.0.1:8080
-API_HOST=http://127.0.0.1:8080/api
+HOST=vps-75099696.vps.ovh.net
+FRONTEND_HOST=https://$HOST
+API_HOST=https://$HOST/api
