Disable usage of letsencrypt as it doesn't work at all

--- a/.env
+++ b/.env
@@ -5,11 +5,12 @@ DB_PASSWORD=password
 DB_NAME=transcendence
 
 BACK_IP=0.0.0.0
-BACK_PORT=8080
+BACK_PORT=80
 
 VITE_IP=0.0.0.0
 VITE_PORT=3000
 
+PROTO=http
 HOST=vps-75099696.vps.ovh.net
-FRONTEND_HOST=https://$HOST
-API_HOST=https://$HOST/api
+FRONTEND_HOST=$PROTO://$HOST
+API_HOST=$PROTO://$HOST/api
