--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ VITE_PORT=3000
 
 PROTO=http
 HOST=vps-75099696.vps.ovh.net
-FRONTEND_HOST=$PROTO://$HOST
-API_HOST=$PROTO://$HOST/api
+FRONTEND_HOST=${PROTO}://${HOST}
+API_HOST=${PROTO}://${HOST}/api
