added docker volume for avatars, now using docker volume pgdata for postgres instead of anonymous volume, moved no_avatar to frontend.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,8 +34,12 @@ services:
         FRONTEND_HOST: ${FRONTEND_HOST}
         API_HOST: ${API_HOST}
     volumes:
+      - avatar:/usr/src/app/upload/avatars/
       - /etc/localtime:/etc/localtime:ro
 
 volumes:
   pgdata:
+    driver: local
+volumes:
+  avatar:
     driver: local
