--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       POSTGRES_INITDB_ARGS: --encoding=UTF-8
       PG_DATA: /var/lib/postgresql/data
     volumes:
+      - pgdata:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
     env_file:
       - .env
@@ -40,6 +41,5 @@ services:
 volumes:
   pgdata:
     driver: local
-volumes:
   avatar:
     driver: local
